syntax = "proto3";

option csharp_namespace = "JDev.Tuteee.Protos";

service Homework {
  rpc Release (ReleaseRequest) returns (ReleaseResponse);
}

message ReleaseRequest {
  int32 lesson_id = 1;
}

message ReleaseResponse {
  bool success = 1;
  string message = 2;
}
